--- a/config/params.yaml
+++ b/config/params.yaml
@@ -51,7 +51,7 @@ webapp_model_dir: machine learning/prediction_service/models/spam classifier.h5
 
 mlflow_config:
   artifacts_dir: artifacts
-  experiment_name: LSTM
+  experiment_name: Logistics
   run_name: mlops
-  registered_model_name: LSTMSpam
+  registered_model_name: Emotion
   remote_server_uri: http://localhost:1234
