--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-# local package
+# local package install
 -e .
 
-# external requirements
-click
-Sphinx
-coverage
-awscli
+# third party packages
+dvc
+dvc[gdrive]
+sklearn
+pandas
+pytest
+tox
 flake8
-python-dotenv>=0.5.1
+flask
+gunicorn
+PyYAML
+nltk
+mlflow
+pickle5==0.0.1
